# kamiwaza-sdk

./: .aikido  .dockerignore  .env.local.example  .fix-prompt  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  KAMIWAZA_IOS_APP_SPEC.md  MODELS_REFACTOR.MD  MODELS_REFACTOR_PLAN.MD  Makefile  README.md  api_todo.md  app-garden-api-endpoints.md  cli-description.md  cli-implementation.md  cli-updates.md  kamiwaza-openapi-spec.json  pyproject.toml  pytest.ini  release.sh  setup.py
.ai/: README.md
.ai/prompts/: add-mixin.md  add-service.md  debug-auth.md  fix-test.md  optimize-performance.md
.ai/rules/: core-principles.md  sdk-patterns.md  style.md  testing.md
.github/: pull_request_template.md
.github/workflows/: claude-review.yml  extension-contract-live.yml  extension-go-reference-e2e.yml  extension-starter-smoke.yml  kamiwaza-mypy-strict.yml  python-build.yml  python-complexity.yml  python-coverage.yml  python-lint.yml  python-mypy.yml  python-tests.yml  require-linear-issue.yml
docs/: activity_service.md  authentication_service.md  catalog_service.md  cli.md  cluster_service.md  embedding_service.md  intro.md  jupyter-quickstart.md  lab_service.md  model_service.md  todo.txt  vectordb_service.md
docs-local/: 00-server-defects.md
docs/Release-Design-Docs/: kz-ext-phase1-design-state.md  kz-ext-phase1-system-design.md
docs/extensions/: developer-guide.md  non-sdk-flow.md
examples/: 01_download_and_deploy.ipynb  02_download_and_deploy_quick.ipynb  03_eval_multiple_models.ipynb  04_structured_output.ipynb  05_tools.ipynb  06_web-agent.ipynb  07_kamiwaza_rag_demo.ipynb  08_app_garden_and_tools.ipynb  09_do_inference_stress.ipynb  10_rag_end_to_end_sdk.ipynb  interactive_rag.py  kz_marketing.md  kz_tech_info.md  list_models.py  model_example.py  oauth_broker_example.py  quickstart.ipynb  structured_data_extraction.ipynb
examples/.jupyter/: jupyter_lab_config.py
examples/chatbot-app/: AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  kamiwaza.json
examples/data/: contacts_1.csv  contacts_2.csv  contacts_3.csv  standardized_contacts.json
extensions/: Makefile
extensions/python/: pyproject.toml
extensions/python/kamiwaza_extensions_lib/: __init__.py  client.py  config.py  errors.py
extensions/python/kamiwaza_extensions_lib/endpoints/: session.py
extensions/python/tests/: test_client.py
extensions/typescript/: package-lock.json  package.json
kamiwaza/: __init__.py  client.py  cluster.py  datasets.py  exceptions.py  federations.py  gates.py  jobs.py  models.py  retrieval.py  subjects.py
kamiwaza-ai-extensions-lib/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
kamiwaza-ai-extensions-lib/tests/: authguard.test.ts  authguard.test.tsx  envelope-headers-shared.test.ts  errors.test.ts  identity-parity.test.ts  identity-strict.test.ts  identity.test.ts  local-dev-auth.test.ts  localDevAuth.test.ts  models.test.ts  proxy.test.ts  sessionprovider.test.ts  sessionprovider.test.tsx  token-refresh.test.ts
kamiwaza_client/: client.py  exceptions.py
kamiwaza_client/cli/: commands.py  config.py  main.py  utils.py
kamiwaza_client/runners/: __init__.py  base_runner.py  file_runner.py
kamiwaza_client/schemas/: catalog.py  embedding.py  vectordb.py
kamiwaza_client/services/: __init__.py  activity.py  auth.py  catalog.py  cluster.py  embedding.py  ingestion.py  lab.py  models.py  openai.py  prompts.py  search.py  serving.py  vectordb.py  vectors.py
kamiwaza_client/utils/: __init__.py  quant_manager.py  rag.py
kamiwaza_extensions/: __init__.py  agent_guidance.md  app_analyzer.py  catalog_overlay.py  catalog_publisher.py  cli.py  compatibility.json  compose_ports.py  compose_transformer.py  connections.py  constants.py  convert_agent.py  deployment_poller.py  dev_diagnostics.py  dev_local.py  dev_state.py  doctor.py  exit_codes.py  extension_detector.py  image_builder.py  image_pusher.py  monorepo.py  payload_builder.py  platform_compat.py  profile_manager.py  registry_builder.py  registry_resolution.py  revision_tagger.py  scaffolder.py  sdk_override.py  template_manifest.py  volume_utils.py
kamiwaza_extensions/commands/: bump.py  config.py  convert.py  create.py  dev.py  dev_local.py  doctor.py  login.py  logs.py  port_forward.py  publish.py  shell.py  status.py  update.py  validate.py
kamiwaza_extensions/convert_agent/: __init__.py  agent.py  models.py  plan.py  prompts.py  providers.py
kamiwaza_extensions/sdk_override/: __init__.py  build.py  classification.py  compose.py  spec.py
kamiwaza_extensions/validators/: compose.py  metadata.py  platform_runtime.py  result.py
kamiwaza_extensions_lib/: CHANGELOG.md  README.md  __init__.py  _jwt.py  _url.py  auth.py  client.py  config.py  errors.py  exception_names.json  identity.py  local_dev.py  models.py  pyproject.toml  session.py  url.py
kamiwaza_extensions_lib/middleware/: __init__.py  token_refresh.py
kamiwaza_sdk/: __init__.py  authentication.py  cli.py  client.py  exceptions.py  token_store.py
kamiwaza_sdk/schemas/: apps.py  auth.py  catalog.py  connector_spec.py  embedding.py  enclaves.py  extensions.py  federation.py  gate_packages.py  ingestion.py  oauth_broker.py  retrieval.py  skills.py  vectordb.py  workrooms.py
kamiwaza_sdk/services/: __init__.py  apps.py  auth.py  authz.py  catalog.py  cluster_federation.py  context.py  datasets.py  embedding.py  enclaves.py  extensions.py  federations.py  gate_packages.py  gates.py  ingestion.py  jobs_federation.py  oauth_broker.py  retrieval.py  retrieval_federation.py  serving.py  skills.py  subjects.py  tools.py  (+2 more)
scripts/: bootstrap_catalog_ingestion.sh  fed_user_smoke.py  start-jupyter-lab.sh
tests/: README.md  conftest.py
tests/e2e/extension_contract/echo-check/backend/: Dockerfile  pyproject.toml  requirements.txt
tests/e2e/extension_contract/echo-check/backend/app/: __init__.py  main.py  workroom_trust.py
tests/e2e/extension_contract/echo-check/backend/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_helpers.py  test_runtime_endpoints.py  test_security_helpers.py
(+339 files in other folders)
