[project]
name = "kamiwaza-sdk"
version = "0.12.0"
description = "Python client library for the Kamiwaza AI Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Kamiwaza Team", email = "eng@kamiwaza.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests",
    "pydantic[email]",
    "httpx",
    "openai>=1.0",
    "huggingface_hub>=0.23",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "fastapi>=0.100.0",
    "rich>=13.0",
    "kamiwaza-extensions-lib>=0.4,<0.5",
]

[project.optional-dependencies]
publish = [
    "boto3>=1.28.0",
]
convert = [
    "anthropic>=0.30.0",
]
all = [
    "boto3>=1.28.0",
    "anthropic>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/kamiwaza/kamiwaza-sdk"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
kz-ext = "kamiwaza_extensions.cli:app"

# `kamiwaza-extensions-lib` is published as its own PyPI distribution
# from `kamiwaza_extensions_lib/pyproject.toml`. For local dev / tests we
# resolve the dep against the in-repo source via a uv workspace member;
# this section is stripped from the wheel metadata at build time, so
# external consumers still resolve the dep from PyPI per the constraint
# declared in `[project.dependencies]` above.
[tool.uv.workspace]
members = ["kamiwaza_extensions_lib"]

[tool.uv.sources]
kamiwaza-extensions-lib = { workspace = true }

[tool.setuptools.packages.find]
include = ["kamiwaza_sdk*", "kamiwaza_client*", "kamiwaza_extensions*"]
exclude = ["tests*", "examples*", "kamiwaza_extensions_lib*"]

[tool.setuptools.package-data]
kamiwaza_sdk = ["py.typed"]
kamiwaza_extensions = ["templates/**/*", "templates/**/.*", "compatibility.json", "agent_guidance.md"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-responses>=0.5",
    "boto3>=1.34",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
    "radon>=5.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast, deterministic tests that require no external services",
    "contract: schema/contract tests with recorded HTTP interactions",
    "integration: tests with local Docker/MinIO dependencies",
    "live: tests that talk to a running Kamiwaza deployment",
    "e2e: full workflow tests",
    "slow: intentionally slow tests",
    "withoutresponses: tests needing real network access",
    "requires_embedding_model: live tests that require an active platform embedding deployment",
    "extension_regression: D210 12-issue regression checklist (UAC-17 / EDX-OPS-2). See tests/unit/extensions/regression/inventory.yaml.",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
