[project]
name = "kamiwaza-sdk"
version = "1.0.0"
description = "Python client library for the Kamiwaza AI Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kamiwaza Team", email = "eng@kamiwaza.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests",
    "pydantic[email]",
    "httpx",
    "openai>=1.0",
    "huggingface_hub>=0.23",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "fastapi>=0.100.0",
    "rich>=13.0",
    "kamiwaza-extensions-lib>=0.4,<0.5",
]

[project.optional-dependencies]
publish = [
    "boto3>=1.28.0",
]
convert = [
    "anthropic>=0.30.0",
]
# Jupyter notebook environment for running the SDK's example notebooks locally.
# Install with:  pip install kamiwaza-sdk[notebook]
# Launch with:   ./scripts/start-jupyter-lab.sh
# See docs/jupyter-quickstart.md for the full local-dev workflow.
notebook = [
    "ipykernel>=6.29.5,<6.29.6",
    "ipython>=8.29.0,<8.29.1",
    "ipywidgets>=8.1.5,<8.1.6",
    "jupyter_client>=8.6.3,<8.6.4",
    "jupyter_core>=5.7.2,<5.7.3",
    "jupyter_server>=2.14.2,<2.14.3",
    "jupyterlab>=4.2.5,<4.2.6",
    "jupyterlab_server>=2.27.3,<2.27.4",
    "jupyterlab_widgets>=3.0.13,<3.0.14",
    "nbclient>=0.10.0,<0.10.1",
    "nbconvert>=7.16.6,<8.0.0",
    "nbformat>=5.10.4,<5.10.5",
    "notebook>=7.2.2,<7.2.3",
    "openai>=1.53.0,<1.53.1",
]
all = [
    "boto3>=1.28.0",
    "anthropic>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/kamiwaza-ai/kamiwaza-sdk"
Repository = "https://github.com/kamiwaza-ai/kamiwaza-sdk"
Issues = "https://github.com/kamiwaza-ai/kamiwaza-sdk/issues"

[build-system]
# setuptools>=77 supports PEP 639 SPDX `license = "Apache-2.0"` in [project]
# and auto-discovers a top-level LICENSE file into the wheel's dist-info.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
kz-ext = "kamiwaza_extensions.cli:app"

# `kamiwaza-extensions-lib` is published as its own PyPI distribution
# from `kamiwaza_extensions_lib/pyproject.toml`. For local dev / tests we
# resolve the dep against the in-repo source via a uv workspace member;
# this section is stripped from the wheel metadata at build time, so
# external consumers still resolve the dep from PyPI per the constraint
# declared in `[project.dependencies]` above.
[tool.uv.workspace]
members = ["kamiwaza_extensions_lib"]

[tool.uv.sources]
kamiwaza-extensions-lib = { workspace = true }

[tool.setuptools.packages.find]
# Disjoint patterns: list `kamiwaza_extensions` and its dotted subpackages
# explicitly so the trailing `*` cannot match `kamiwaza_extensions_lib`. The
# `exclude` line is kept as a defense-in-depth backstop, but the include
# alone is now correct.
#
# WS-M3.2 / design v0.3.7 §4.2.11: the v0.2.0 ``kamiwaza`` namespace
# experiment was reversed. The canonical SDK lives at
# ``kamiwaza_sdk.KamiwazaClient``; federation-aware services live at
# ``kamiwaza_sdk/services/``. The interim ``kamiwaza`` package was
# deleted in the same change that ships v0.3.7.
include = [
    "kamiwaza_sdk*",
    "kamiwaza_client*",
    "kamiwaza_extensions",
    "kamiwaza_extensions.*",
]
exclude = ["tests*", "examples*", "kamiwaza_extensions_lib*"]

[tool.setuptools.package-data]
kamiwaza_sdk = ["py.typed"]
kamiwaza_extensions = ["templates/**/*", "templates/**/.*", "compatibility.json", "agent_guidance.md"]

[tool.mypy]
python_version = "3.10"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-responses>=0.5",
    "pytest-httpx>=0.30",
    "boto3>=1.34",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
    "radon>=5.1",
    "pdoc>=14.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast, deterministic tests that require no external services",
    "contract: schema/contract tests with recorded HTTP interactions",
    "integration: tests with local Docker/MinIO dependencies",
    "live: tests that talk to a running Kamiwaza deployment",
    "e2e: full workflow tests",
    "slow: intentionally slow tests",
    "withoutresponses: tests needing real network access",
    "requires_embedding_model: live tests that require an active platform embedding deployment",
    "requires_two_clusters: live tests that require a federation peer cluster reachable via KAMIWAZA_PEER_BASE_URL / KAMIWAZA_PEER_API_KEY (ENG-5784)",
    "extension_regression: D210 12-issue regression checklist (UAC-17 / EDX-OPS-2). See tests/unit/extensions/regression/inventory.yaml.",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
