[project]
name = "echo-check-backend"
version = "0.2.0"
description = "Minimal Kamiwaza contract app for live extension checks"
requires-python = ">=3.12"
dependencies = [
    "kamiwaza-extensions-lib>=0.4,<0.5",
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
